EPMRPP-99152 new rest client