@@ -16,10 +16,10 @@
 
 package com.epam.reportportal.extension.jira.command;
 
-import com.atlassian.jira.rest.client.api.JiraRestClient;
-import com.atlassian.jira.rest.client.api.domain.IssueType;
-import com.atlassian.jira.rest.client.api.domain.Project;
 import com.epam.reportportal.extension.ProjectManagerCommand;
+import com.epam.reportportal.extension.jira.api.model.IssueTypeDetails;
+import com.epam.reportportal.extension.jira.api.model.Project;
+import com.epam.reportportal.extension.jira.client.JiraRestClient;
 import com.epam.reportportal.extension.jira.command.utils.CloudJiraClientProvider;
 import com.epam.reportportal.extension.jira.command.utils.CloudJiraProperties;
 import com.epam.reportportal.rules.exception.ErrorType;
@@ -28,8 +28,7 @@ import com.epam.ta.reportportal.dao.ProjectRepository;
 import com.epam.ta.reportportal.entity.integration.Integration;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
-import java.util.stream.StreamSupport;
+import org.springframework.web.client.RestClientException;
 
 /**
  * @author <a href="mailto:pavel_bortnik@epam.com">Pavel Bortnik</a>
@@ -51,17 +50,18 @@ public class GetIssueTypesCommand extends ProjectManagerCommand<List<String>> {
 
   @Override
   protected List<String> invokeCommand(Integration integration, Map<String, Object> params) {
-    try (JiraRestClient client = cloudJiraClientProvider.get(integration.getParams())) {
-      Project jiraProject = client.getProjectClient().getProject(
-          CloudJiraProperties.PROJECT.getParam(integration.getParams()).orElseThrow(
-              () -> new ReportPortalException(ErrorType.UNABLE_INTERACT_WITH_INTEGRATION,
-                  "Project is not specified."
-              ))).claim();
-      return StreamSupport.stream(jiraProject.getIssueTypes().spliterator(), false)
-          .map(IssueType::getName).collect(Collectors.toList());
+    try {
+      JiraRestClient client = cloudJiraClientProvider.getApiClient(integration.getParams());
+      var projectKey = CloudJiraProperties.PROJECT.getParam(integration.getParams()).get();
+      Project jiraProject = client.projectsApi().getProject(projectKey, null, null);
+
+      return jiraProject.getIssueTypes().stream()
+          .map(IssueTypeDetails::getName)
+          .toList();
+    } catch (RestClientException e) {
+      throw new ReportPortalException(ErrorType.UNABLE_INTERACT_WITH_INTEGRATION, "Project not found.");
     } catch (Exception e) {
-      throw new ReportPortalException(
-          ErrorType.UNABLE_INTERACT_WITH_INTEGRATION, "Check connection settings.");
+      throw new ReportPortalException(ErrorType.UNABLE_INTERACT_WITH_INTEGRATION, "Check connection settings.");
     }
   }
 }
